source/main.scss
/* ... */
@each $font-style in root.$font-styles {

    .font-style-#{$font-style} {
        font-style: $font-style;
    }

}

.text-decoration-none {
    text-decoration: none;
}

.text-decoration-underline {
    text-decoration: underline;
}

.text-decoration-overline {
    text-decoration: overline;
}

.text-decoration-error {
    text-decoration: underline wavy var(--color-negative);
}

/* Inputs */

input,
select,
textarea,
button {
    height: calc(var(--space-large)* 2);
    padding: var(--space-smaller);
    background-color: var(--color-input);
    color: var(--color-input-text);
    border: none;
    font-family: var(--font-family-regular);
    border-radius: var(--border-radius);
    transition-delay: 0ms;
    transition-duration: var(--hover-transition-duration);
    transition-property: background-color;
    transition-timing-function: ease;
    outline: none;
}

input:focus,
select:focus,
textarea:focus {
    background-color: var(--color-input-special);
}

input:disabled,
select:disabled,
textarea:disabled,
button:disabled {
    cursor: not-allowed;
    opacity: 0.75;
}

select::after {
    content: "Beans";
}

input[type=button],
input[type=reset],
input[type=submit],
button,
input[type=range]::-webkit-slider-thumb {
    background-color: var(--color-accent);
    color: var(--color-input-text-special);
    border: none;
    font-family: var(--font-family-regular);
    border-radius: var(--border-radius);
    font-weight: var(--font-weight-larger);
    cursor: pointer;
}

input[type=button]:not(:disabled):hover,
input[type=reset]:not(:disabled):hover,
input[type=submit]:not(:disabled):hover,
input[type=color]:not(:disabled):hover,
input[type=color]:not(:disabled):focus,
button:not(:disabled):hover,
input::-webkit-file-upload-button:not(:disabled):hover,
input::-webkit-file-upload-button:not(:disabled):hover,
input[type=range]::-webkit-slider-thumb:not(:disabled):hover {
    background-color: var(--color-accent-special);
}

input[type=checkbox],
input[type=radio] {
    width: var(--space-larger);
    height: var(--space-larger);
    cursor: pointer;
}

input[type=radio] {
    border-radius: 50%;
}

input[type=checkbox]:checked,
input[type=radio]:checked {
    position: relative;
    background-color: var(--color-accent);
}

input[type=checkbox]:not(.switch):checked::after {
    content: " ";
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: var(--color-input-text-special);
    clip-path: polygon(40% 60%, 80% 0, 100% 20%, 40% 100%, 0 60%, 20% 40%);
    transform: scale(0.75);
}

input[type=checkbox]:not(.switch):checked::after {
    content: " ";
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: var(--color-input-text-special);
    clip-path: polygon(40% 60%, 80% 0, 100% 20%, 40% 100%, 0 60%, 20% 40%);
    transform: scale(0.75);
}

input[type=color] {
    background-color: var(--color-input);
    width: 100%;
    cursor: pointer;
    padding: 0;
}

input[type=color]::-webkit-color-swatch-wrapper {
    padding: 0;
    margin: auto;
    width: calc(100% - calc(var(--space-medium) * 2));
    border: var(--border);
    border-color: var(--color-input);
}

input[type=color]::-webkit-color-swatch {
    border: none;
}

input::-webkit-calendar-picker-indicator {
    width: var(--space-large);
    height: var(--space-large);
    margin: 0;
    padding: 0;
    margin-right: var(--space-small);
    background: none;
    background-color: var(--color-accent);
    border-radius: 2px;
    transition-delay: 0;
    transition-duration: var(--hover-transition-duration);
    transition-property: background-color;
    transition-timing-function: ease;
    cursor: pointer;
    -webkit-appearance: none;
    clip-path: polygon(0 25%, 0 10%, 20% 10%, 20% 0, 35% 0, 35% 10%, 65% 10%, 65% 0, 80% 0, 80% 10%, 100% 10%, 100% 25%, 100% 35%, 0 35%, 0 60%, 15% 60%, 15% 45%, 85% 45%, 85% 60%, 0 60%, 0 100%, 100% 100%, 100% 35%, 100% 25%);;
}

input::-webkit-search-cancel-button {
    width: var(--space-medium);
    height: var(--space-medium);
    margin: 0;
    padding: 0;
    margin-right: var(--space-small);
    background: none;
    background-color: var(--color-accent);
    transition-delay: 0;
    transition-duration: var(--hover-transition-duration);
    transition-property: background-color;
    transition-timing-function: ease;
    cursor: pointer;
    clip-path: polygon(20% 0%, 0% 20%, 30% 50%, 0% 80%, 20% 100%, 50% 70%, 80% 100%, 100% 80%, 70% 50%, 100% 20%, 80% 0%, 50% 30%);
    -webkit-appearance: none;
}

input::-webkit-calendar-picker-indicator:hover,
input::-webkit-search-cancel-button:hover {
    background-color: var(--color-accent-special);
}

input[type=file] {
    padding: 0;
    cursor: pointer;
}

input[type=file]::file-selector-button {
    background-color: var(--color-accent);
    font-weight: var(--font-weight-large);
    color: var(--color-page);
    font-size: 1rem;
    height: 100%;
    border: none;
    outline: none;
    cursor: pointer;
}

input[type=file]::file-selector-button:hover {
    background-color: var(--color-accent-special);
}

input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
    display: none;
}

input[type=range] {
    cursor: pointer;
    padding: 0;
}

input[type=range]::-webkit-slider-runnable-track {
    height: 100%;
    padding: 0;
    background-color: transparent;
}

input[type=range]::-webkit-slider-thumb {
    height: var(--input-size);
    width: var(--input-size);
    -webkit-appearance: none;
}

textarea {
    min-height: var(--input-size);
    resize: vertical;
}

::-webkit-resizer {
    background-color: var(--color-accent);
    border-top-left-radius: var(--border-radius);
    border-bottom-right-radius: var(--border-radius);
}
/* ... */

